--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 @import url('base/variables.css');
 
 @import url('layout/body.css');
+@import url('layout/footer.css');
 @import url('layout/header.css');
 @import url('layout/page-primary.css');
 @import url('layout/services.css');
